[package]
name = "grid-tree"
description = "Pixel quadtrees and voxel octrees."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/grid-tree-rs"
keywords = ["grid", "quadtree", "octree", "spatial", "voxel"]

[features]
default = ["bevy_math"]
glam = ["dep:glam"]
bevy_math = ["dep:bevy_math"]

[dependencies]
ahash = "0.8"
slab = "0.4"
smallvec = "1.7"

ndshape = "0.3"

# The default choice of VectorKey.
glam = { version = "0.25", optional = true }
bevy_math = { version = "0.15", optional = true }
